objects/User_Answer__c.object
<CustomObject>
    <fields>
        <fullName>BLN_Answer__c</fullName>
        <label>BLN Answer</label>
        <referenceTo>BLN_Answer__c</referenceTo>
        <relationshipLabel>BLN User Answers</relationshipLabel>
        <relationshipName>BLN_User_Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Item_Question__c</fullName>
        <label>Item Question</label>
        <referenceTo>Item_Question__c</referenceTo>
        <relationshipName>User_Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ticket__c</fullName>
        <label>Ticket</label>
        <referenceTo>Ticket__c</referenceTo>
        <relationshipName>User_Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UAnswer_Text_Update__c</fullName>
        <label>UAnswer Text Update</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UAnswer_Text__c</fullName>
        <label>UAnswer Text</label>
        <length>34000</length>
        <type>LongTextArea</type>
    </fields>
    <label>BLN User Answer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Item_Question__c</columns>
        <columns>UAnswer_Text__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>UANS-{000000}</displayFormat>
        <label>User Answer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BLN User Answers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>